nginx-ingress-grpc-example/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: fortune-ingress
  namespace: default
spec:
  tls:
  # This secret must exist beforehand
  # The cert must also contain the subj-name fortune-teller.stack.build
  # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
  - secretName: grpc-lb-demo-tls
    #hosts:
    #  - greeter.demo.com
  rules:
  - host: greeter.demo.com
    http:
      paths:
      - backend:
          serviceName: fortune-teller-service
          servicePort: grpc
